--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 secret.py
+secret.py.prod
+secret.py.dev
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
